updated ad and consent form

--- a/templates/ad.html
+++ b/templates/ad.html
@@ -83,8 +83,8 @@
 									Internet Explorer, etc. are not allowed), have normal or corrected-to-normal vision 
 									(glasses or contacts are OK!  Just make sure you are wearing them when you participate
 									in this study), and that you do not have any history of seizures, 
-									epilepsy, or stroke. The task will take approximately 50-60 minutes and will 
-									pay $4 upon completion of the experiment, with the possibility of receiving
+									epilepsy, or stroke. The task will take approximately 30 minutes and will 
+									pay $2 upon completion of the experiment, with the possibility of receiving
 									a $1 bonus payment if your performance is higher than that of the previous 
 									participant.
 							    </p>
