--- a/templates/consent.html
+++ b/templates/consent.html
@@ -28,26 +28,26 @@
                     <p>
                     Thank you for your interest in this study!  If you so choose, you will be participating in a study 
 					conducted by principal investigator Dr. Brian Odegaard (UCLA) and faculty sponsor Dr. Hakwan Lau (UCLA).  
-					The purpose of this study is to investigate how we make judgments on color based on their relative location 
+					The purpose of this study is to investigate how we make judgments on motion based on their relative location 
                     in the visual field.
                     </p>
                     <p>
-					This experiment displays colored patches at various locations in your browser window.  Before we describe
+					This experiment displays patches of dots at various locations in your browser window.  Before we describe
 					the task and instructions below, please note the following four items:<br><br>
 					<b>1.) PLEASE USE GOOGLE CHROME AS YOUR WEB BROWSER IN THIS EXPERIMENT<br></b>
 					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;Safari, Firefox, Internet Explorer, and other browsers will not work.<br><br>
 					<b>2.) Please resize this browser window NOW so that it fills your entire screen!</b><br><br>
 					<b>3.) Please do NOT adjust your browser size after starting the experiment, as this can disrupt 
 					proper presentation of the stimuli!</b><br><br>
-					<b>4.) Finally, please note that it may take the experiment 5 minutes to load!</b><br>
+					<b>4.) Finally, please note that it may take the experiment a few seconds to load.</b><br>
 					&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;You do not need to refresh the page after clicking the 
-					button to begin; the screen will change and the experiment will start after a few minutes.
+					button to begin; the screen will change and the experiment will start after a few seconds.
 	                </p>
 					<p>
 					<b>Task:</b><br>
 					If you elect to participate in this study, you will be asked to do the following task: on every trial,
-					3 patches consisting of many colors will be shown.  Following the presentation of the patches, you
-					will judge which of the patches are more colorful.
+					a patch of moving dots will be shown.  Following the presentation of the patches, you
+					will judge which direction the dots were moving in.
 					</p>
 					<p>
 					The entire study should last about 30 minutes. It is important that you complete the study while in 
@@ -56,7 +56,7 @@
 					</p>
 	                <p>
 					As with any task requiring that you focus intently on the computer monitor, you may experience
-					some eye fatigue or dryness. There are 2 breaks built into the experiment and it is recommended that
+					some eye fatigue or dryness. There is 1 break built into the experiment and it is recommended that
 					you take a 1 minute rest during the break, though you may take longer if you need.
 					</p>
 					<p>
@@ -67,7 +67,7 @@
 					OK!  Just make sure you are wearing them when you participate in this study).  Please DO NOT
 					participate if you have a history of seizures, epilepsy, or stroke, as the stimuli we present 
 					in the experiment will be briefly flashed, and this is a potential (but unlikely) seizure
-					trigger.  Finally, if you have previously participated in an experiment about judging color
+					trigger.  Finally, if you have previously participated in an experiment about judging dot motion
 					that looks similar to this one, we would appreciate it if you abstained from participating, 
 					as we would like to evaluate participants that have never done this task before.
 					</p>
@@ -118,8 +118,8 @@
                 <hr>
                 <h4>Do you understand and consent to these terms?<br>
 					If you click "I Agree," remember:<br>
-					It may take the screen a few minutes to change, as the experiment loads! <br>
-					Please wait and do not close the browser. Think of it as you being paid to do what you want for a few minutes. </h4>
+					It may take the screen a few seconds to change, as the experiment loads! <br>
+					Please wait and do not close the browser. </h4>
                 <br>
 
                 <center>
