--- a/templates/exp.html
+++ b/templates/exp.html
@@ -180,7 +180,7 @@
 		//--End Experiment Clause--
 		
 		//Add in the clause at the last easy practice trial to end the experiment if the number of correct responses for easy practice trials was not reached
-		practiceTrialsBlock = addInEndExperimentClause(practiceTrialsBlock);
+		//practiceTrialsBlock = addInEndExperimentClause(practiceTrialsBlock);
 		
 		
 		//-----HARD TRIALS-----
@@ -210,7 +210,6 @@
 		
 		//Add in the break screens for the actual trials
 		var allActualTrialsWithBreaks = addInBreaks(allActualTrials);
-		console.log(allActualTrialsWithBreaks);
 		
 		
 		//------Main Timeline------
